# fast-rust-dev

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: catalog.rs  cli.rs  doctor.rs  main.rs  runner.rs  suggestion.rs  system.rs  toml_ops.rs  ui.rs  wizard.rs
