[package]
name = "frd"
version = "0.1.0"
edition = "2024"
description = "Speed up local Rust builds and shrink target/ with interactive cargo and profile tuning"
license = "MIT"
repository = "https://github.com/cs50victor/fast-rust-dev"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
dirs = "6.0.0"
similar = "3.1.1"
toml_edit = "0.25.12"
